--- a/Movie/.settings/org.eclipse.core.resources.prefs
+++ b/Movie/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
 encoding//WebContent/chat2.jsp=UTF-8
 encoding//src/chat/ChatListServlet.java=UTF-8
+encoding//src/main/java/com/movie/board/BoardDAO.java=UTF-8
+encoding//src/main/java/com/movie/board/BoardWriteServlet.java=UTF-8
