--- a/Movie/pom.xml
+++ b/Movie/pom.xml
@@ -18,9 +18,19 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
-            <encoding>UTF-8</encoding>
+          <encoding>UTF-8</encoding>
         </configuration>
       </plugin>
+      
+      
+      <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.2.1</version>
