--- a/Movie/pom.xml
+++ b/Movie/pom.xml
@@ -12,7 +12,16 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   <build>
     
     <plugins>
-  
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.7.0</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+		  <encoding>UTF-8</encoding>
+                
+        </configuration>
+      </plugin>
       
       
       <plugin>
@@ -50,6 +59,12 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     <scope>provided</scope>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/com.servlets/cos -->
+<dependency>
+    <groupId>com.servlets</groupId>
+    <artifactId>cos</artifactId>
+    <version>05Nov2002</version>
+</dependency>
 
 <dependency>
     <groupId>mysql</groupId>
