--- a/Movie/pom.xml
+++ b/Movie/pom.xml
@@ -51,6 +51,14 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     <version>1.4.7</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/org.glassfish/javax.json -->
+<dependency>
+    <groupId>org.glassfish</groupId>
+    <artifactId>javax.json</artifactId>
+    <version>1.1.4</version>
+</dependency>
+
+
 
 <dependency>
     <groupId>javax.servlet</groupId>
